# amazon-q-developer-cli

./: .editorconfig  AmazonQ.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.amazonq/rules/: cross.md
bundle/linux/: install.sh
crates/amzn-codewhisperer-client/: Cargo.toml
crates/amzn-codewhisperer-streaming-client/: Cargo.toml
crates/amzn-consolas-client/: Cargo.toml
crates/amzn-qdeveloper-client/: Cargo.toml
crates/amzn-qdeveloper-streaming-client/: Cargo.toml
crates/amzn-toolkit-telemetry/: Cargo.toml
crates/aws-toolkit-telemetry-definitions/: Cargo.toml
crates/fig_api_client/: Cargo.toml
crates/fig_auth/: Cargo.toml
crates/fig_aws_common/: Cargo.toml
crates/fig_desktop/: Cargo.toml
crates/fig_desktop_api/: Cargo.toml
crates/fig_install/: Cargo.toml
crates/fig_proto/: Cargo.toml
crates/fig_request/: Cargo.toml
crates/fig_telemetry/: Cargo.toml
crates/fig_test_macro/: Cargo.toml
crates/fig_util/: Cargo.toml
crates/figterm/: Cargo.toml
crates/q_cli/: Cargo.toml
crates/zbus/: Cargo.toml
crates/zbus_names/: Cargo.toml
proto/: package.json
tests/zip-install-rust/: .gitignore  AmazonQ.md  Cargo.toml  DESIGN.md  Dockerfile.q-test-ubuntu-22.04-x86_64-glibc-1742382266  Dockerfile.q-test-ubuntu-22.04-x86_64-glibc-1742596258  IMPLEMENTATION_NOTES.md  README.md  run-test.sh  test-script.sh
tests/zip-install-rust/src/: config.rs  container.rs  dockerfile.rs  finch_container.rs  lib.rs  main.rs  runner.rs  utils.rs
tests/zip-install-rust/tests/: integration_test.rs
tests/zip-install-rust/tests/common/: mod.rs
(+38 files in other folders)
