[package]
name = "zip-install-test"
version = "1.7.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
bollard = "0.15"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
tokio = { version = "1.32", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
which = "4.4"

[dev-dependencies]
test-case = "3.0"
